# ai_lab_blokus

./: .gitignore  pyproject.toml  readme.ipynb  readme.md
src/detection/: __init__.py  board_seg.py  grid.py  normalization.py
src/game/: env.py  logic.py  statistics.py  ui.py
src/types/: tiles.py
src/utils/: __init__.py
