[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
ultralytics = "^8.3.27"
gradio = "^5.7.1"
supervision = "^0.25.0"
opencv-python = "^4.10.0.84"
pygame = "^2.6.1"
ipympl = "^0.9.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbconvert = "^7.16.4"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
